Update to Solution: Interfacing the DC Motor (MotEncEx3)

--- a/config/HwConfigBBBlue.json
+++ b/config/HwConfigBBBlue.json
@@ -168,22 +168,42 @@
 			"type": "Fqd",
 			"channel1": {
 				"signalId": "enc1",
-				"scale": [ { "id" : "fqd",
+				"scale": [ { "id" : "gear",
+							"minIn": 	0, "maxIn": 1,
+							"minOut":	0, "maxOut": 33.086538461 },
+							{ "id" : "enc",
 							"minIn": 	0, "maxIn": 6.283185307,
-							"minOut":	0, "maxOut": 4000 }
+							"minOut":	0, "maxOut": 16 },
+							{ "id" : "fqd",
+							"minIn": 	0, "maxIn": 1,
+							"minOut":	0, "maxOut": 4 }
 					 ],
-				"range": [ { "id" : "fqd",
+				"range": [ { "id" : "gear",
+							"noLimit": 	true },
+							{ "id" : "enc",
+							"noLimit": 	true },
+							{ "id" : "fqd",
 							"noLimit": 	true }
 					 ],
 				"unit": "rad"
 			},
 			"channel2": {
 				"signalId": "enc2",
-				"scale": [ { "id" : "fqd",
+				"scale": [ { "id" : "gear",
+							"minIn": 	0, "maxIn": 1,
+							"minOut":	0, "maxOut": 33.086538461 },
+							{ "id" : "enc",
 							"minIn": 	0, "maxIn": 6.283185307,
-							"minOut":	0, "maxOut": 4000 }
+							"minOut":	0, "maxOut": 16 },
+							{ "id" : "fqd",
+							"minIn": 	0, "maxIn": 1,
+							"minOut":	0, "maxOut": 4 }
 					 ],
-				"range": [ { "id" : "fqd",
+				"range": [ { "id" : "gear",
+							"noLimit": 	true },
+							{ "id" : "enc",
+							"noLimit": 	true },
+							{ "id" : "fqd",
 							"noLimit": 	true }
 					 ],
 				"unit": "rad"
